add api to admin page for create terminal and vehicles
