# routes/adminRouter.js
@@ -7,6 +7,7 @@ const adminController = require('../controllers/adminController');
 
 // Example: Only admins can get all drivers
 router.get('/drivers', authenticate, authorize(['admin']), adminController.getAllDrivers);
+router.get('/admin', authenticate, authorize(['admin']), adminController.getAllAdmin);
 router.get('/line-managers', authenticate, authorize(['admin']), adminController.getAllLineManagers);
 router.get('/terminals', authenticate, authorize(['admin']), adminController.getAllTerminals);
 router.get('/vehicles', authenticate, authorize(['admin']), adminController.getAllVehicles);
