# routes/terminalRouter.js
@@ -3,16 +3,23 @@
 const express = require('express');
 const Router = express.Router();
 const terminalController = require('../controllers/terminalController');
-const authenticate=require('../middleware/protectRoutes'); 
+const authenticate=require('../middleware/protectRoutes');
+Router
+    .route('/')
+    .get(authenticate, terminalController.getAllTerminals) // Existing route
+    .post(authenticate, terminalController.createTerminal); // New POST route for creating a terminal
 
 Router
-.route('/').get(authenticate,terminalController.getAllTerminals);
+    .route('/:id')
+    .get(authenticate, terminalController.getATerminal) // Existing route
+    .put(authenticate, terminalController.updateTerminal) // New PUT route for updating a terminal
+    .delete(authenticate, terminalController.deleteTerminal); // New DELETE route for deleting a terminal
+
 
 Router
 .route('/manager').get(authenticate,terminalController.getAllTerminalsManager);
 
-Router
-.route('/:id').get(authenticate,terminalController.getATerminal);
+
 Router
 .route('/:id/lines').get(authenticate,terminalController.getLinesByTerminal);
 
